fix(css): fix page overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,20 +1,17 @@
 @import './tailwind.css';
 
+@font-face {
+  font-family: 'Unbounded';
+  src: url('fonts/unbounded-variable.woff2') format('woff2');
+}
+
 body {
   font-family: 'Unbounded', sans-serif;
 }
 
-html,
-body,
-#root {
-  display: flex;
-  width: 100%;
-  height: 100%;
-}
-
 html {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  min-height: 100dvh;
 }
 
 *,
